--- a/MyMod/MyMod.csproj
+++ b/MyMod/MyMod.csproj
@@ -5,8 +5,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{44F8C838-553C-482C-B389-2B375B8590C9}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Workshopping</RootNamespace>
-    <AssemblyName>MyMod</AssemblyName>
+    <RootNamespace>EdgesOfTheMultiverse</RootNamespace>
+    <AssemblyName>EdgesMod</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -26,16 +26,21 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
+  <PropertyGroup>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="EngineCommon">
-      <HintPath>..\..\..\Library\Application Support\Steam\steamapps\common\Sentinels of the Multiverse\Sentinels.app\Contents\Resources\Data\Managed\EngineCommon.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Sentinels of the Multiverse\Sentinels_Data\Managed\EngineCommon.dll</HintPath>
     </Reference>
     <Reference Include="SentinelsEngine">
-      <HintPath>..\..\Handelabra\SentinelsEngine\SentinelsEngine\bin\Debug\SentinelsEngine.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Sentinels of the Multiverse\Sentinels_Data\Managed\SentinelsEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Eliza\ElizaCharacterCardController.cs" />
+    <Compile Include="Eliza\CardControllerTemplate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MigrantCoder\WorstCardEverCardController.cs" />
     <Compile Include="MigrantCoder\MigrantCoderCharacterCardController.cs" />
@@ -76,16 +81,9 @@
     <EmbeddedResource Include="DeckLists\TheHugMonsterTeamDeckList.json" />
     <EmbeddedResource Include="DeckLists\PromoCardList.json" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Folder Include="TheBaddies\" />
-    <Folder Include="DevStream\" />
-    <Folder Include="TheHugMonsterTeam\" />
-    <Folder Include="Bunker\" />
-    <Folder Include="BaronBlade\" />
-    <Folder Include="Cauldron.Cricket\" />
-    <Folder Include="TheSentinels\" />
-    <Folder Include="SkyScraper\" />
+    <EmbeddedResource Include="DeckLists\ElizaDeckList.json" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
