--- a/EdgesMod/EdgesMod.csproj
+++ b/EdgesMod/EdgesMod.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -7,7 +7,8 @@
     <OutputType>Library</OutputType>
     <RootNamespace>EdgesOfTheMultiverse</RootNamespace>
     <AssemblyName>EdgesMod</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -18,6 +19,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
@@ -25,6 +27,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
@@ -39,54 +42,23 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Eliza\CallForArmsCardController.cs" />
     <Compile Include="Eliza\ArcaneArmCardController.cs" />
-    <Compile Include="Eliza\BladeFlurryCardController.cs" />
-    <Compile Include="Eliza\CaptureNotKillCardController.cs" />
     <Compile Include="Eliza\ArcaneCellCardController.cs" />
-    <Compile Include="Eliza\DeliberateTargetingCardController.cs" />
-    <Compile Include="Eliza\RunicRapierCardController.cs" />
-    <Compile Include="Eliza\DeflectionCellCardController.cs" />
-    <Compile Include="Eliza\ImapctCellCardController.cs" />
-    <Compile Include="Eliza\TelekineticCellCardController.cs" />
-    <Compile Include="Eliza\ChargeTheArcaneCellsCardController.cs" />
-    <Compile Include="Eliza\SwiftIncapacitationCardController.cs" />
-    <Compile Include="Eliza\RapidStrikesCardController.cs" />
-    <Compile Include="Eliza\OmnifensiveFightingCardController.cs" />
-    <Compile Include="Eliza\ElizaCharacterCardController.cs" />
+    <Compile Include="Eliza\BladeFlurryCardController.cs" />
+    <Compile Include="Eliza\CallForArmsCardController.cs" />
+    <Compile Include="Eliza\CaptureNotKillCardController.cs" />
     <Compile Include="Eliza\CardControllerTemplate.cs" />
+    <Compile Include="Eliza\ChargeTheArcaneCellsCardController.cs" />
+    <Compile Include="Eliza\DeflectionCellCardController.cs" />
+    <Compile Include="Eliza\DeliberateTargetingCardController.cs" />
+    <Compile Include="Eliza\ElizaCharacterCardController.cs" />
+    <Compile Include="Eliza\ImapctCellCardController.cs" />
+    <Compile Include="Eliza\OmnifensiveFightingCardController.cs" />
+    <Compile Include="Eliza\RapidStrikesCardController.cs" />
+    <Compile Include="Eliza\RunicRapierCardController.cs" />
+    <Compile Include="Eliza\SwiftIncapacitationCardController.cs" />
+    <Compile Include="Eliza\TelekineticCellCardController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MigrantCoder\WorstCardEverCardController.cs" />
-    <Compile Include="MigrantCoder\MigrantCoderCharacterCardController.cs" />
-    <Compile Include="MigrantCoder\PunchingBagCardController.cs" />
-    <Compile Include="MigrantCoder\MigrantCoderTurnTakerController.cs" />
-    <Compile Include="TheBaddies\TheBaddiesCharacterCardController.cs" />
-    <Compile Include="TheBaddies\TheBaddiesTurnTakerController.cs" />
-    <Compile Include="TheBaddies\FireEverythingCardController.cs" />
-    <Compile Include="DevStream\DroppedFrameCardController.cs" />
-    <Compile Include="TheHugMonsterTeam\TheHugMonsterTeamCharacterCardController.cs" />
-    <Compile Include="TheHugMonsterTeam\WarmEmbraceCardController.cs" />
-    <Compile Include="MigrantCoder\MigrantCoderLockdownCharacterCardController.cs" />
-    <Compile Include="Bunker\WaywardBunkerCharacterCardController.cs" />
-    <Compile Include="TheBaddies\TheRealBaddiesCharacterCardController.cs" />
-    <Compile Include="BaronBlade\BaronJeremyCharacterCardController.cs" />
-    <Compile Include="Cauldron.Cricket\NoisyCricketCharacterCardController.cs" />
-    <Compile Include="MigrantCoder\CodersKeyboardCardController.cs" />
-    <Compile Include="MigrantCoder\BugFixCardController.cs" />
-    <Compile Include="TheBaddies\SmashBackFieldCardController.cs" />
-    <Compile Include="TheSentinels\TheSerpentinelsInstructionsCardController.cs" />
-    <Compile Include="TheSentinels\DrMedicobraCharacterCardController.cs" />
-    <Compile Include="TheSentinels\MainsnakeCharacterCardController.cs" />
-    <Compile Include="TheSentinels\TheIdealizardCharacterCardController.cs" />
-    <Compile Include="TheSentinels\WrattleCharacterCardController.cs" />
-    <Compile Include="TheBaddies\WrightWeighCardController.cs" />
-    <Compile Include="TheBaddies\TheRealBaddiesTurnTakerController.cs" />
-    <Compile Include="SkyScraper\CentristSkyScraperNormalCharacterCardController.cs" />
-    <Compile Include="SkyScraper\CentristSkyScraperTinyCharacterCardController.cs" />
-    <Compile Include="SkyScraper\CentristSkyScraperHugeCharacterCardController.cs" />
-    <Compile Include="DevStream\SpamBotCardController.cs" />
-    <Compile Include="DevStream\ModderCardController.cs" />
-    <Compile Include="BaronBlade\BaronJeremyTurnTakerController.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="DeckLists\MigrantCoderDeckList.json" />
