--- a/EdgesModConsole/EdgesModConsole.csproj
+++ b/EdgesModConsole/EdgesModConsole.csproj
@@ -51,7 +51,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MyMod\MyMod.csproj">
+    <ProjectReference Include="..\EdgesMod\EdgesMod.csproj">
       <Project>{44f8c838-553c-482c-b389-2b375b8590c9}</Project>
       <Name>MyMod</Name>
     </ProjectReference>
