Angel Slayer Variant, Typo Fixing, and most tests done

--- a/EdgesMod/EdgesMod.csproj
+++ b/EdgesMod/EdgesMod.csproj
@@ -42,6 +42,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Eliza\AngelSlayerElizaCharacterCardController.cs" />
     <Compile Include="Eliza\ArcaneArmCardController.cs" />
     <Compile Include="Eliza\ArcaneCellCardController.cs" />
     <Compile Include="Eliza\BladeFlurryCardController.cs" />
